--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "configureJPush": "node node_modules/jpush-react-native/JPushConfiguration.js",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "jcore-react-native": "^1.1.3",
+    "jpush-react-native": "^1.6.6",
     "react": "15.4.2",
     "react-native": "0.42.3",
     "react-native-tab-navigator": "^0.3.3",
